--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,75 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <!-- Text styles -->
+    <style name="White20LeftMd">
+        <item name="android:textSize">@dimen/font_bigger</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Gray18CenteredMd">
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">@dimen/font_big</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+        <item name="android:textColor">@color/gray</item>
+    </style>
+
+    <style name="White16CenteredRg">
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Gray16CenteredRg">
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+        <item name="android:textColor">@color/gray</item>
+    </style>
+
+    <style name="Gray16LeftRg">
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+        <item name="android:textColor">@color/close_black</item>
+    </style>
+
+    <style name="Blue14CenteredUpMd">
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">@dimen/font_normal</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/azur</item>
+    </style>
+
+    <style name="White14CenteredUpMd">
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">@dimen/font_normal</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="Gray12LeftRg">
+        <item name="android:textSize">@dimen/font_small</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">4sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
 </resources>
