--- a/app/src/main/res/layout/activity_qr_scanner.xml
+++ b/app/src/main/res/layout/activity_qr_scanner.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.livetyping.moydom.ui.activity.QrScannerActivity">
+    tools:context="com.livetyping.moydom.ui.activity.authorization.QrScannerActivity">
 
     <com.journeyapps.barcodescanner.DecoratedBarcodeView
         android:id="@+id/activity_qr_scanner_view"
