--- a/app/src/main/res/drawable/background_azur_corners.xml
+++ b/app/src/main/res/drawable/background_azur_corners.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid
-        android:color="@color/azur"/>
+        android:color="@color/azul"/>
     <corners
         android:radius="2dp"/>
 </shape>
