--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -29,4 +29,6 @@
     <dimen name="padding_small">12dp</dimen>
     <dimen name="padding_little">10dp</dimen>
     <dimen name="padding_tiny">8dp</dimen>
+
+    <dimen name="no_internet_view_height">38dp</dimen>
 </resources>
