--- a/app/src/main/res/layout/fragment_my_home.xml
+++ b/app/src/main/res/layout/fragment_my_home.xml
@@ -1,98 +1,119 @@
-<RelativeLayout
+<android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_height="wrap_content"
+    android:clipToPadding="false"
+    android:overScrollMode="never"
+    android:paddingBottom="@dimen/padding_huge"
     tools:context="com.livetyping.moydom.ui.fragment.mainScreen.MyHomeFragment">
 
     <RelativeLayout
-        android:id="@+id/fragment_my_home_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/spacing_normal">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/fragment_my_home_cameras_all"
-            style="@style/Blue14RightUpMd"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/fragment_my_home_cameras_container"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:text="@string/see_all"
-            android:textAllCaps="true"/>
+            android:layout_margin="@dimen/spacing_normal">
 
-        <TextView
-            style="@style/Black16LeftMd"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/fragment_my_home_cameras_all"
+                style="@style/Blue14RightUpMd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:text="@string/see_all"
+                android:textAllCaps="true"/>
+
+            <TextView
+                style="@style/Black16LeftMd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@id/fragment_my_home_cameras_all"
+                android:text="@string/cameras"/>
+
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_my_home_cameras_recycler"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_toStartOf="@id/fragment_my_home_cameras_all"
-            android:text="@string/cameras"/>
+            android:layout_below="@id/fragment_my_home_cameras_container"
+            android:clipToPadding="true"
+            android:overScrollMode="never"
+            android:paddingEnd="@dimen/padding_normal"
+            android:paddingStart="@dimen/padding_normal">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <RelativeLayout
+            android:id="@+id/fragment_my_home_energy_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_my_home_cameras_recycler"
+            android:layout_margin="@dimen/spacing_normal">
+
+            <TextView
+                android:id="@+id/fragment_my_home_energy_all"
+                style="@style/Blue14RightUpMd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:text="@string/see_all"
+                android:textAllCaps="true"/>
+
+            <TextView
+                style="@style/Black16LeftMd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@id/fragment_my_home_energy_all"
+                android:text="@string/electric_energy"/>
+
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_my_home_energy_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_my_home_energy_container"
+            android:overScrollMode="never"
+            android:paddingEnd="@dimen/padding_normal"
+            android:paddingStart="@dimen/padding_normal">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <RelativeLayout
+            android:id="@+id/fragment_my_home_internet_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/fragment_my_home_internet_text"
+                style="@style/White16CenteredRg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginBottom="@dimen/spacing_tiny"
+                android:layout_marginTop="@dimen/spacing_tiny"/>
+
+            <ProgressBar
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="@dimen/spacing_normal"/>
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/fragment_my_home_cameras_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/fragment_my_home_container"
-        android:clipToPadding="true"
-        android:paddingEnd="@dimen/padding_normal"
-        android:paddingStart="@dimen/padding_normal">
-
-    </android.support.v7.widget.RecyclerView>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/fragment_my_home_cameras_recycler"
-        android:layout_margin="@dimen/spacing_normal">
-
-        <TextView
-            android:id="@+id/fragment_my_home_energy_all"
-            style="@style/Blue14RightUpMd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:text="@string/see_all"
-            android:textAllCaps="true"/>
-
-        <TextView
-            style="@style/Black16LeftMd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_toStartOf="@id/fragment_my_home_energy_all"
-            android:text="@string/electric_energy"/>
-
-    </RelativeLayout>
-    
-    <RelativeLayout
-        android:id="@+id/fragment_my_home_internet_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone">
-
-        <TextView
-            android:id="@+id/fragment_my_home_internet_text"
-            style="@style/White16CenteredRg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_tiny"
-            android:layout_marginBottom="@dimen/spacing_tiny"
-            android:layout_centerInParent="true"/>
-
-        <ProgressBar
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="@dimen/spacing_normal"/>
-
-    </RelativeLayout>
-
-</RelativeLayout>
+</android.support.v4.widget.NestedScrollView>
