added main screen with energy cells. Reworked settings.

--- a/app/src/main/res/drawable/background_energy_red.xml
+++ b/app/src/main/res/drawable/background_energy_red.xml
@@ -4,8 +4,8 @@
         <shape>
             <gradient
                 android:angle="270"
-                android:endColor="#f5f5f5"
-                android:startColor="@color/white"
+                android:endColor="#ef1c0b"
+                android:startColor="#ff6246"
                 android:type="linear"/>
             <corners
                 android:radius="2dp"/>
