--- a/app/src/main/res/drawable/background_energy_green.xml
+++ b/app/src/main/res/drawable/background_energy_green.xml
@@ -4,8 +4,8 @@
         <shape>
             <gradient
                 android:angle="270"
-                android:endColor="#f5f5f5"
-                android:startColor="@color/white"
+                android:endColor="#2dca59"
+                android:startColor="#189f4f"
                 android:type="linear"/>
             <corners
                 android:radius="2dp"/>
