--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,7 +3,7 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_my_home"
-        android:icon="@drawable/resources_inactive"
+        android:icon="@drawable/home_inactive"
         app:showAsAction="always|withText"
         android:title="@string/my_home"/>
     <item
