--- a/app/src/main/res/layout/activity_appeal_select_category.xml
+++ b/app/src/main/res/layout/activity_appeal_select_category.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.livetyping.moydom.ui.activity.appeal.AppealCategoryActivity">
+    tools:context="com.livetyping.moydom.ui.activity.appeal.AppealSelectCategoryActivity">
 
     <include layout="@layout/toolbar"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/activity_appeal_category_recycler"
+        android:id="@+id/activity_appeal_select_category_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
