--- a/app/src/main/res/layout/activity_appeal.xml
+++ b/app/src/main/res/layout/activity_appeal.xml
@@ -28,11 +28,8 @@
         android:layout_marginEnd="@dimen/spacing_small"
         android:layout_marginStart="@dimen/spacing_small"
         android:layout_marginTop="@dimen/spacing_tiny"
-        android:fontFamily="sans-serif"
-        android:lineSpacingExtra="4sp"
-        android:textColor="@color/black"
-        android:textSize="@dimen/font_small"
-        android:textStyle="normal"/>
+        android:textColor="@color/close_black"
+        android:textSize="@dimen/font_large"/>
 
     <EditText
         android:id="@+id/activity_appeal_body"
