--- a/app/src/main/res/layout/activity_appeal.xml
+++ b/app/src/main/res/layout/activity_appeal.xml
@@ -57,7 +57,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/activity_appeal_body"
-                android:layout_margin="@dimen/spacing_normal">
+                android:layout_marginBottom="@dimen/spacing_normal"
+                android:layout_marginEnd="@dimen/spacing_tiny"
+                android:layout_marginStart="@dimen/spacing_normal"
+                android:layout_marginTop="@dimen/spacing_normal">
 
             </android.support.v7.widget.RecyclerView>
 
