--- a/app/src/main/res/layout/item_appeal_photo.xml
+++ b/app/src/main/res/layout/item_appeal_photo.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/item_appeal_photo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="@dimen/appeal_photo_width_height"
+        android:layout_height="@dimen/appeal_photo_width_height"
         android:foreground="@drawable/background_appeal_photo"/>
 
     <ImageView
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_alignEnd="@id/item_appeal_photo"
         android:layout_alignTop="@id/item_appeal_photo"
-        android:layout_margin="4dp"
+        android:layout_margin="@dimen/spacing_tiny"
         android:src="@drawable/ic_close_circle_white_24dp"/>
 
 </RelativeLayout>
