--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,6 @@
     <dimen name="padding_little">10dp</dimen>
     <dimen name="padding_tiny">8dp</dimen>
 
+    <dimen name="appeal_photo_width_height">160dp</dimen>
+
 </resources>
