--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,9 @@
     <color name="sapphire">#2547ab</color>
 
     <color name="white">#ffffff</color>
+    <color name="white_gray">#f5f5f5</color>
+    <color name="close_gray">#ff737374</color>
+    <color name="blue_gray">#FFA0AFF0</color>
     <color name="gray">#1a1a1a</color>
     <color name="black_gray">#61000000</color>
     <color name="close_black">#de000000</color>
