--- a/app/src/main/res/layout/item_energy.xml
+++ b/app/src/main/res/layout/item_energy.xml
@@ -1,76 +1,208 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/item_energy_container"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:layout_marginBottom="@dimen/spacing_tiny">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <ProgressBar
-        android:id="@+id/item_energy_progress_bar"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:layout_margin="@dimen/spacing_normal"
-        android:visibility="gone"/>
+    <RelativeLayout
+        android:id="@+id/item_energy_container"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginBottom="@dimen/spacing_tiny">
 
-    <ImageView
-        android:id="@+id/item_energy_wave"
-        android:layout_width="276dp"
-        android:layout_height="74dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="-8dp"
-        android:layout_marginEnd="-14dp"
-        android:layout_marginTop="26dp"/>
+        <ProgressBar
+            android:id="@+id/item_energy_progress_bar"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_margin="@dimen/spacing_normal"
+            android:visibility="gone"/>
 
-    <TextView
-        android:id="@+id/item_energy_current_period"
-        style="@style/White16LeftBld"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="@dimen/spacing_normal"
-        android:layout_marginTop="@dimen/spacing_normal"
-        android:layout_toStartOf="@+id/item_energy_price"/>
+        <ImageView
+            android:id="@+id/item_energy_wave"
+            android:layout_width="276dp"
+            android:layout_height="74dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="-8dp"
+            android:layout_marginEnd="-14dp"
+            android:layout_marginTop="26dp"/>
 
-    <TextView
-        android:id="@+id/item_energy_current_date"
-        style="@style/White14LeftMd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/item_energy_current_period"
-        android:layout_marginStart="@dimen/spacing_normal"
-        android:layout_toStartOf="@+id/item_energy_price"/>
+        <TextView
+            android:id="@+id/item_energy_current_period"
+            style="@style/White16LeftBld"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:layout_marginTop="@dimen/spacing_normal"
+            android:layout_toStartOf="@+id/item_energy_price"/>
 
-    <TextView
-        android:id="@+id/item_energy_unit"
-        style="@style/White14RightBld"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="@dimen/spacing_normal"
-        android:layout_marginEnd="@dimen/spacing_normal"/>
+        <TextView
+            android:id="@+id/item_energy_current_date"
+            style="@style/White14LeftMd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/item_energy_current_period"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:layout_toStartOf="@+id/item_energy_price"/>
 
-    <TextView
-        android:id="@+id/item_energy_measure"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/item_energy_unit"
-        android:layout_alignParentEnd="true"
-        android:layout_marginBottom="4dp"
-        android:layout_marginEnd="@dimen/spacing_normal"
-        android:textColor="@color/white"
-        android:textSize="@dimen/font_big"/>
+        <TextView
+            android:id="@+id/item_energy_unit"
+            style="@style/White14RightBld"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="@dimen/spacing_normal"
+            android:layout_marginEnd="@dimen/spacing_normal"/>
 
-    <TextView
-        android:id="@+id/item_energy_price"
-        style="@style/White52RightRg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/item_energy_unit"
-        android:layout_marginStart="@dimen/spacing_larger"
-        android:layout_toStartOf="@id/item_energy_measure"/>
+        <TextView
+            android:id="@+id/item_energy_measure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/item_energy_unit"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="4dp"
+            android:layout_marginEnd="@dimen/spacing_normal"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_big"/>
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/item_energy_price"
+            style="@style/White52RightRg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/item_energy_unit"
+            android:layout_marginStart="@dimen/spacing_larger"
+            android:layout_toStartOf="@id/item_energy_measure"
+            android:maxLines="1"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/item_energy_month_container"
+        android:layout_width="match_parent"
+        android:layout_height="188dp"
+        android:layout_marginBottom="@dimen/spacing_tiny"
+        android:visibility="visible">
+
+        <ImageView
+            android:id="@+id/item_energy_month_wave"
+            android:layout_width="276dp"
+            android:layout_height="74dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="-8dp"
+            android:layout_marginEnd="-14dp"
+            android:layout_marginTop="26dp"/>
+
+        <TextView
+            android:id="@+id/item_energy_month_current_period"
+            style="@style/White16LeftBld"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:layout_marginTop="@dimen/spacing_normal"
+            android:layout_toStartOf="@+id/item_energy_month_price"/>
+
+        <TextView
+            android:id="@+id/item_energy_month_current_date"
+            style="@style/White14LeftMd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/item_energy_month_current_period"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:layout_toStartOf="@+id/item_energy_month_price"/>
+
+        <TextView
+            android:id="@+id/item_energy_month_unit"
+            style="@style/White14RightBld"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/item_energy_month_price"
+            android:layout_marginBottom="@dimen/spacing_normal"
+            android:layout_marginEnd="@dimen/spacing_normal"
+            android:layout_marginTop="-6dp"/>
+
+        <TextView
+            android:id="@+id/item_energy_month_measure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/item_energy_month_price"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="@dimen/spacing_normal"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_big"/>
+
+        <TextView
+            android:id="@+id/item_energy_month_price"
+            style="@style/White52RightRg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacing_larger"
+            android:layout_toStartOf="@id/item_energy_month_measure"
+            android:maxLines="1"/>
+
+        <View
+            android:id="@+id/item_energy_month_separating_line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_below="@id/item_energy_month_unit"
+            android:layout_marginEnd="@dimen/spacing_normal"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:background="@color/white"/>
+
+        <TextView
+            android:id="@+id/item_energy_month_prediction_period"
+            style="@style/White16LeftBld"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/item_energy_month_separating_line"
+            android:layout_marginStart="@dimen/spacing_normal"
+            android:layout_marginTop="@dimen/spacing_normal"
+            android:layout_toStartOf="@+id/item_energy_month_price"
+            android:text="@string/prediction"/>
+
+        <TextView
+            android:id="@+id/item_energy_month_prediction_unit"
+            style="@style/White14RightBld"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/item_energy_month_prediction_price"
+            android:layout_marginBottom="@dimen/spacing_normal"
+            android:layout_marginEnd="@dimen/spacing_normal"/>
+
+        <TextView
+            android:id="@+id/item_energy_month_prediction_measure"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/item_energy_month_prediction_price"
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="4dp"
+            android:layout_marginEnd="@dimen/spacing_normal"
+            android:textColor="@color/white"
+            android:textSize="@dimen/font_big"/>
+
+        <TextView
+            android:id="@+id/item_energy_month_prediction_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/item_energy_month_separating_line"
+            android:layout_marginStart="@dimen/spacing_larger"
+            android:layout_marginTop="@dimen/spacing_tiny"
+            android:layout_toStartOf="@id/item_energy_month_prediction_measure"
+            android:maxLines="1"
+            android:textColor="@color/white"
+            android:textSize="32sp"/>
+
+    </RelativeLayout>
+
+</LinearLayout>
