--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_activity_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -13,9 +14,9 @@
     <FrameLayout
         android:id="@+id/main_activity_fragment_container"
         android:layout_width="match_parent"
-        android:layout_below="@+id/toolbar"
+        android:layout_height="match_parent"
         android:layout_above="@+id/bottom_navigation_view"
-        android:layout_height="match_parent">
+        android:layout_below="@+id/toolbar">
 
     </FrameLayout>
 
