--- a/app/src/main/res/layout/fragment_my_home.xml
+++ b/app/src/main/res/layout/fragment_my_home.xml
@@ -1,100 +1,92 @@
-<RelativeLayout
+<android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:clipToPadding="false"
+    android:paddingBottom="@dimen/padding_huge"
     tools:context="com.livetyping.moydom.ui.fragment.mainScreen.MyHomeFragment">
 
-    <android.support.v4.widget.NestedScrollView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:paddingBottom="@dimen/padding_huge">
+        android:layout_height="wrap_content">
 
         <RelativeLayout
+            android:id="@+id/fragment_my_home_cameras_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/spacing_normal">
 
-            <RelativeLayout
-                android:id="@+id/fragment_my_home_cameras_container"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/fragment_my_home_cameras_all"
+                style="@style/Blue14RightUpMd"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/spacing_normal">
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:text="@string/see_all"
+                android:textAllCaps="true"/>
 
-                <TextView
-                    android:id="@+id/fragment_my_home_cameras_all"
-                    style="@style/Blue14RightUpMd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:text="@string/see_all"
-                    android:textAllCaps="true"/>
-
-                <TextView
-                    style="@style/Black16LeftMd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_toStartOf="@id/fragment_my_home_cameras_all"
-                    android:text="@string/cameras"/>
-
-            </RelativeLayout>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/fragment_my_home_cameras_recycler"
-                android:layout_width="match_parent"
+            <TextView
+                style="@style/Black16LeftMd"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/fragment_my_home_cameras_container"
-                android:clipToPadding="false"
-                android:paddingEnd="@dimen/padding_tiny"
-                android:paddingStart="@dimen/padding_normal">
-
-            </android.support.v7.widget.RecyclerView>
-
-            <RelativeLayout
-                android:id="@+id/fragment_my_home_energy_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/fragment_my_home_cameras_recycler"
-                android:layout_margin="@dimen/spacing_normal">
-
-                <TextView
-                    android:id="@+id/fragment_my_home_energy_all"
-                    style="@style/Blue14RightUpMd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:text="@string/see_all"
-                    android:textAllCaps="true"/>
-
-                <TextView
-                    style="@style/Black16LeftMd"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:layout_toStartOf="@id/fragment_my_home_energy_all"
-                    android:text="@string/electric_energy"/>
-
-            </RelativeLayout>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/fragment_my_home_energy_recycler"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/fragment_my_home_energy_container"
-                android:paddingEnd="@dimen/padding_normal"
-                android:paddingStart="@dimen/padding_normal">
-
-            </android.support.v7.widget.RecyclerView>
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@id/fragment_my_home_cameras_all"
+                android:text="@string/cameras"/>
 
         </RelativeLayout>
 
-    </android.support.v4.widget.NestedScrollView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_my_home_cameras_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_my_home_cameras_container"
+            android:clipToPadding="false"
+            android:paddingEnd="@dimen/padding_tiny"
+            android:paddingStart="@dimen/padding_normal">
 
-    <include layout="@layout/layout_internet_view"/>
+        </android.support.v7.widget.RecyclerView>
 
-</RelativeLayout>
+        <RelativeLayout
+            android:id="@+id/fragment_my_home_energy_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_my_home_cameras_recycler"
+            android:layout_margin="@dimen/spacing_normal">
+
+            <TextView
+                android:id="@+id/fragment_my_home_energy_all"
+                style="@style/Blue14RightUpMd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:text="@string/see_all"
+                android:textAllCaps="true"/>
+
+            <TextView
+                style="@style/Black16LeftMd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_toStartOf="@id/fragment_my_home_energy_all"
+                android:text="@string/electric_energy"/>
+
+        </RelativeLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_my_home_energy_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/fragment_my_home_energy_container"
+            android:paddingEnd="@dimen/padding_normal"
+            android:paddingStart="@dimen/padding_normal">
+
+        </android.support.v7.widget.RecyclerView>
+
+    </RelativeLayout>
+
+</android.support.v4.widget.NestedScrollView>
