--- a/app/src/main/res/layout/activity_camera_permission.xml
+++ b/app/src/main/res/layout/activity_camera_permission.xml
@@ -26,12 +26,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/spacing_huge"
+            android:alpha="0.54"
             android:text="@string/dont_have_permission_to_camera"/>
 
         <TextView
             style="@style/Gray16CenteredRg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:alpha="0.54"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/spacing_tiny"
             android:text="@string/please_need_request_to_camera_for_enter_app"/>
