--- a/app/src/main/res/layout/activity_code_not_found.xml
+++ b/app/src/main/res/layout/activity_code_not_found.xml
@@ -27,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="@dimen/spacing_huge"
+            android:alpha="0.54"
             android:text="@string/code_not_found"/>
 
         <TextView
@@ -34,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_tiny"
+            android:alpha="0.54"
             android:text="@string/leave_phone_number"/>
 
         <TextView
