--- a/app/src/main/res/layout/activity_onboarding.xml
+++ b/app/src/main/res/layout/activity_onboarding.xml
@@ -41,7 +41,9 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_above="@+id/activity_onboarding_title"
+        android:scaleType="fitCenter"
         android:layout_centerHorizontal="true"
         android:src="@drawable/phone"/>
 
