--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,72 +41,6 @@
     </style>
 
     <!-- Text styles -->
-    <style name="White20LeftMd">
-        <item name="android:textSize">@dimen/font_bigger</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
-
-    <style name="Gray18CenteredMd">
-        <item name="android:gravity">center_horizontal</item>
-        <item name="android:textSize">@dimen/font_big</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:lineSpacingExtra">6sp</item>
-        <item name="android:textColor">@color/gray</item>
-    </style>
-
-    <style name="White16CenteredRg">
-        <item name="android:gravity">center_horizontal</item>
-        <item name="android:textSize">@dimen/font_large</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:lineSpacingExtra">6sp</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
-
-    <style name="Gray16CenteredRg">
-        <item name="android:gravity">center_horizontal</item>
-        <item name="android:textSize">@dimen/font_large</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:lineSpacingExtra">6sp</item>
-        <item name="android:textColor">@color/gray</item>
-    </style>
-
-    <style name="Gray16LeftRg">
-        <item name="android:textSize">@dimen/font_large</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:lineSpacingExtra">6sp</item>
-        <item name="android:textColor">@color/close_black</item>
-    </style>
-
-    <style name="Blue14CenteredUpMd">
-        <item name="android:gravity">center_horizontal</item>
-        <item name="android:textSize">@dimen/font_normal</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/azul</item>
-    </style>
-
-    <style name="White14CenteredUpMd">
-        <item name="android:gravity">center_horizontal</item>
-        <item name="android:textSize">@dimen/font_normal</item>
-        <item name="android:fontFamily">sans-serif-medium</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:textColor">@color/white</item>
-    </style>
-
-    <style name="Gray12LeftRg">
-        <item name="android:textSize">@dimen/font_small</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textStyle">normal</item>
-        <item name="android:lineSpacingExtra">4sp</item>
-        <item name="android:textColor">@color/black</item>
-    </style>
-
     <style name="White52RightRg">
         <item name="android:gravity">end</item>
         <item name="android:textSize">52sp</item>
@@ -114,7 +48,34 @@
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">#ffffff</item>
     </style>
-
+    <style name="White20LeftMd">
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
+    <style name="Black20LeftLt">
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">2sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+    <style name="Gray20LeftLt">
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">2sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+    <style name="Gray18CenteredMd">
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+        <item name="android:textColor">#1a1a1a</item>
+    </style>
     <style name="White16LeftBld">
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">sans-serif</item>
@@ -129,7 +90,29 @@
         <item name="android:lineSpacingExtra">3sp</item>
         <item name="android:textColor">#de000000</item>
     </style>
-
+    <style name="Gray16LeftRg">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+        <item name="android:textColor">#de000000</item>
+    </style>
+    <style name="Gray16CenteredRg">
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">@dimen/font_large</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+        <item name="android:textColor">@color/gray</item>
+    </style>
+    <style name="White16CenteredRg">
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
     <style name="Wgite16LeftRg">
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">sans-serif</item>
@@ -137,7 +120,6 @@
         <item name="android:lineSpacingExtra">4sp</item>
         <item name="android:textColor">#ffffff</item>
     </style>
-
     <style name="White14RightBld">
         <item name="android:gravity">end</item>
         <item name="android:textSize">14sp</item>
@@ -146,13 +128,19 @@
         <item name="android:lineSpacingExtra">4sp</item>
         <item name="android:textColor">#ffffff</item>
     </style>
-
     <style name="White14LeftMd">
         <item name="android:textSize">14sp</item>
         <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textStyle">normal</item>
         <item name="android:lineSpacingExtra">4sp</item>
         <item name="android:textColor">#ffffff</item>
+    </style>
+    <style name="Blue14CenteredUpMd">
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/azul</item>
     </style>
     <style name="Blue14RightUpMd">
         <item name="android:gravity">end</item>
@@ -162,12 +150,17 @@
         <item name="android:lineSpacingExtra">4sp</item>
         <item name="android:textColor">@color/azul</item>
     </style>
-    <style name="White14RightRg">
-        <item name="android:gravity">end</item>
+    <style name="Gray14LeftMd">
         <item name="android:textSize">14sp</item>
-        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:lineSpacingExtra">4sp</item>
+        <item name="android:textColor">#61000000</item>
+    </style>
+    <style name="White14CenteredUpMd">
+        <item name="android:gravity">center_horizontal</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textStyle">normal</item>
         <item name="android:textColor">#ffffff</item>
     </style>
     <style name="Blue14CenteredRg">
@@ -178,7 +171,29 @@
         <item name="android:lineSpacingExtra">6sp</item>
         <item name="android:textColor">@color/azul</item>
     </style>
-
+    <style name="Graywhite14RightRg">
+        <item name="android:gravity">end</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">6sp</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
+    <style name="White14RightRg">
+        <item name="android:gravity">end</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">4sp</item>
+        <item name="android:textColor">#ffffff</item>
+    </style>
+    <style name="Gray12LeftRg">
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">4sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
     <style name="Gray12CenteredRg">
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textSize">12sp</item>
